WRP-2674 minor fix on alignment

--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -23,7 +23,7 @@
 .small-buttons {text-align:center;}
 .primitive-buttons, .primitive-buttons:hover, .primitive-buttons[disabled], .primitive-buttons:focus, .primitive-buttons:active
 {    padding: 0px!important; background-color:transparent!important;}
-button.fsn-title-button{width:100%;}
+button.fsn-title-button{width:100%;padding-top: 7px!important;}
 
 .editpanel .darkbuttons {
     font-size: 20px;
